# verifx

./: cargo.toml
verifix_program/: Anchor.toml
verifix_program/programs/verifix_program/: Cargo.toml
verifix_program/programs/verifix_program/src/: lib.rs
verifix_program/tests/: verifix_program.rs  verifix_program.ts
verifx_cli/: Cargo.toml
verifx_cli/src/: main.rs
verifx_program/: Anchor.toml  Cargo.toml
verifx_program/src/: lib.rs
verifx_program/tests/: verifix_program.rs
