[package]
name = "verifx_program"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.24.2"

[lib]
crate-type = ["cdylib", "lib"]


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
